Fill `initiator_origins` in OpenURLParams.

The recently added initiator_origins field check was causing a crash when
opening a new window from the service worker.

Bug: 923848

Change-Id: I0ad54ce53ae42179ec3cc1aaefcc4785118f9306
Reviewed-on: https://chromium-review.googlesource.com/c/1422005
Commit-Queue: Rayan Kanso <rayankans@chromium.org>
Reviewed-by: Hiroki Nakagawa <nhiroki@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624582}
Former-commit-id: 1eba98bdca607c38280c349afdcfb05a03ab64e7